syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message World {
  int32 id = 1;
  string name = 2;
  bool public = 3;
  google.protobuf.Timestamp createdAt = 4;
  string basedOn = 5;
  string shortDescription = 6;
  string imageAvatar = 7;
  string imageThumbnail = 8;
  string imageHeader = 9;
  optional int32 descriptionPostId = 10;
  repeated int32 tags = 11;
  int32 activityPostCount = 12;
  int32 activityQuestCount = 13;
  int32 activityResourceCount = 14;
  int32 worldMenuId = 15;
}

message WorldActivity {
  int32 worldId = 1;
  google.protobuf.Timestamp date = 2;
  int32 activityPostCount = 3;
  int32 activityQuestCount = 4;
  int32 activityResourceCount = 5;
}
